--- a/EA_Graph_Layout_Vite_JS/index.html
+++ b/EA_Graph_Layout_Vite_JS/index.html
@@ -9,8 +9,10 @@
   <body>
     <div id="app"></div>
     <div id="info">Best fitness: ?</div>
-    <div id="canvas" style="width: 600px; height: 400px">canvas</div>
-    <div id="canvasTimeline" style="width: 600px; height: 300px">canvastimeline</div>
+    <div>
+      <div id="canvas" style="float: left; width: 600px; height: 400px">canvas</div>
+      <div id="canvasTimeline" style="float: right; width: 600px; height: 300px">canvastimeline</div>
+    </div> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.1/echarts.min.js" integrity="sha512-41TNls7qBS/8rKqfgMho0blSRty2TgHbdHq1h8x248EseHj1ZfFPAbjWVBQssJtkXptUwaBLVC3F1W8he53bgw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
